--- a/src/main/webapp/protected/admin/users.xhtml
+++ b/src/main/webapp/protected/admin/users.xhtml
@@ -10,46 +10,19 @@
 		<h:outputText value="Users" />
 	</ui:define>
 
+	<ui:define name="pageHeader">
+		<h:outputText value="User administration" />
+	</ui:define>
+
 	<ui:define name="content">
 		<h:form id="userForm">
 			<p:growl id="mainGrowl" sticky="true" />
-			<p:panelGrid style="width:800px">
-				<f:facet name="header">
-					<p:row>
-						<p:column style="text-align:right">Logged in as: #{loginBean.uname} (<h:commandLink action="#{loginBean.logout}" value="Logout" />)
-							<h:selectOneMenu
-								onchange="window.location=this.options[this.selectedIndex].value">
-								<f:selectItem itemLabel="Administration menu" itemValue="" />
-								<f:selectItem itemLabel="Users" itemValue="/EAM/protected/admin/users.xhtml" />
-							</h:selectOneMenu>
-						</p:column>
-					</p:row>
-				</f:facet>
-			</p:panelGrid>
-
-			<ui:remove>
-				<p:commandButton value="search" icon="ui-icon-search"
-					actionListener="#{productSearchBean.doSearchAsset}"
-					update="dataTable" />
-			</ui:remove>
-
-			<p:tabMenu activeIndex="99">
-				<p:menuitem value="Dashboard"
-					url="${pageContext.request.contextPath}/protected/dashboard.xhtml"
-					icon="ui-icon-star" />
-				<p:menuitem value="Search"
-					url="${pageContext.request.contextPath}/protected/search.xhtml"
-					icon="ui-icon-search" />
-				<p:menuitem value="Add new"
-					url="${pageContext.request.contextPath}/protected/create.xhtml"
-					icon="ui-icon-disk" />
-			</p:tabMenu>
 
 			<p:layout style="width:800px;height:600px;" id="layout">
 				<p:layoutUnit position="west" resizable="false" size="400"
 					style="border:none;">
 					<p:dataTable id="dataTable" var="user"
-						value="#{loginBean.allUsers}" style="width:380px">
+						value="#{loginBean.allUsers}" style="width:380px;font-size:12px;">
 
 						<f:facet name="header">Users</f:facet>
 
@@ -78,7 +51,7 @@
 
 				<p:layoutUnit position="center" style="border:none;">
 
-					<p:panelGrid style="width:380px">
+					<p:panelGrid style="width:380px;font-size:12px;">
 						<f:facet name="header">
 							<p:row>
 								<p:column colspan="2">
