--- a/src/main/webapp/public/login.xhtml
+++ b/src/main/webapp/public/login.xhtml
@@ -1,52 +1,72 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-<ui:composition template="/template/common.xhtml">
+<f:view contentType="text/html">
 
-	<ui:define name="pageTitle">
-		<h:outputText value="Login" />
-	</ui:define>
+	<h:head>
 
-	<ui:define name="content">
-		<p:panelGrid style="width:800px">
-			<f:facet name="header">
-				<p:row>
-					<p:column>Login</p:column>
-				</p:row>
-			</f:facet>
-		</p:panelGrid>
+		<f:facet name="first">
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+			<title>Enterprise Asset Manager</title>
+		</f:facet>
 
-		<ui:remove>
-			<p:commandButton value="search" icon="ui-icon-search"
-				actionListener="#{productSearchBean.doSearchAsset}"
-				update="dataTable" />
-		</ui:remove>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<p:tabMenu>
-		</p:tabMenu>
+		<link href="/EAM/resources/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="/EAM/resources/font-awesome/css/font-awesome.css"
+			rel="stylesheet" />
 
-		<h:form id="loginForm">
-			<p:growl id="msg" showDetail="true" life="3000" />
-			<p:panel header="Login" style="width: 360px;position:absolute;left:50%;margin-left:-180px;">
-				<h:panelGrid id="loginPanel" columns="2">
-					<h:outputText value="Username" />
-					<p:inputText id="username" value="#{loginBean.uname}"></p:inputText>
-					<p:spacer></p:spacer>
-					<p:message for="username"></p:message>
-					<h:outputText value="Password" />
-					<p:password id="password" value="#{loginBean.password}"
-						feedback="false"></p:password>
-					<p:spacer></p:spacer>
-					<p:message for="password"></p:message>
-					<p:spacer></p:spacer>
-					<p:commandButton action="#{loginBean.loginProject}" value="Login"
-						update="loginForm" ajax="true"></p:commandButton>
-				</h:panelGrid>
-			</p:panel>
-		</h:form>
-	</ui:define>
-</ui:composition>
+		<link
+			href="/EAM/resources/css/plugins/dataTables/dataTables.bootstrap.css"
+			rel="stylesheet" />
+
+		<link href="/EAM/resources/css/sb-admin.css" rel="stylesheet" />
+
+
+	</h:head>
+
+	<body>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+						<div class="panel-body">
+							<h:form id="loginForm">
+								<p:panel header="Login"
+									style="width: 360px;position:absolute;left:50%;margin-left:-180px;">
+									<h:panelGrid id="loginPanel" columns="2">
+										<h:outputText value="Username" style="margin-right:10px;"/>
+										<p:inputText id="username" value="#{loginBean.uname}"></p:inputText>
+										<p:spacer></p:spacer>
+										<p:message for="username"></p:message>
+										<h:outputText value="Password" />
+										<p:password id="password" value="#{loginBean.password}"
+											feedback="false"></p:password>
+										<p:spacer></p:spacer>
+										<p:message for="password"></p:message>
+										<p:spacer></p:spacer>
+										<p:commandButton action="#{loginBean.loginProject}"
+											value="Login" update="loginForm" ajax="true" style="margin-top:10px;"/>
+									</h:panelGrid>
+								</p:panel>
+							</h:form>
+						</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Core Scripts - Include with every page -->
+		<script src="/EAM/resources/js/bootstrap.min.js"></script>
+		<script src="/EAM/resources/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+
+		<!-- SB Admin Scripts - Include with every page -->
+		<script src="/EAM/resources/js/sb-admin.js"></script>
+
+	</body>
+</f:view>
 </html>
